Completes update of JUnit tests after URI change (issue #79)