@@ -1,7 +1,7 @@
 package com.nimbusds.openid.connect.sdk.rp;
 
 
-import java.net.URL;
+import java.net.URI;
 import java.util.Date;
 
 import junit.framework.TestCase;
@@ -22,16 +22,16 @@ public class OIDCClientInformationResponseTest extends TestCase {
 		throws Exception {
 
 		ClientID id = new ClientID("123");
-		URL url = new URL("https://c2id.com/client-reg/123");
+		URI uri = new URI("https://c2id.com/client-reg/123");
 		BearerAccessToken accessToken = new BearerAccessToken();
 		OIDCClientMetadata metadata = new OIDCClientMetadata();
-		metadata.setRedirectionURI(new URL("https://client.com/cb"));
+		metadata.setRedirectionURI(new URI("https://client.com/cb"));
 		metadata.applyDefaults();
 		Secret secret = new Secret();
 		Date issueDate = new Date(new Date().getTime() / 1000 * 1000);
 
 		OIDCClientInformation info = new OIDCClientInformation(
-			id, url, accessToken, metadata, secret, issueDate);
+			id, uri, accessToken, metadata, secret, issueDate);
 
 		OIDCClientInformationResponse response = new OIDCClientInformationResponse(info);
 
@@ -43,7 +43,7 @@ public class OIDCClientInformationResponseTest extends TestCase {
 		response = OIDCClientInformationResponse.parse(httpResponse);
 
 		assertEquals(id.getValue(), response.getClientInformation().getID().getValue());
-		assertEquals(url.toString(), response.getClientInformation().getRegistrationURI().toString());
+		assertEquals(uri.toString(), response.getClientInformation().getRegistrationURI().toString());
 		assertEquals(accessToken.getValue(), response.getClientInformation().getRegistrationAccessToken().getValue());
 		assertEquals("https://client.com/cb", response.getClientInformation().getClientMetadata().getRedirectionURIs().iterator().next().toString());
 		assertEquals(secret.getValue(), response.getClientInformation().getSecret().getValue());
