@@ -1,19 +1,16 @@
 package com.nimbusds.openid.connect.sdk.rp;
 
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Date;
 import java.util.Set;
 
-import com.nimbusds.oauth2.sdk.ParseException;
+import junit.framework.TestCase;
+
 import com.nimbusds.oauth2.sdk.auth.Secret;
-import com.nimbusds.oauth2.sdk.client.ClientInformation;
-import com.nimbusds.oauth2.sdk.client.ClientMetadata;
 import com.nimbusds.oauth2.sdk.id.ClientID;
 import com.nimbusds.oauth2.sdk.token.BearerAccessToken;
 import com.nimbusds.oauth2.sdk.util.JSONObjectUtils;
-import junit.framework.TestCase;
 
 
 /**
@@ -73,11 +70,11 @@ public class OIDCClientInformationTest extends TestCase {
 
 
 	public void testConstructor()
-		throws MalformedURLException {
+		throws Exception {
 
 		ClientID clientID = new ClientID("123");
 
-		URL regURL = new URL("https://c2id.com/client-reg/123");
+		URI regURI = new URI("https://c2id.com/client-reg/123");
 
 		BearerAccessToken accessToken = new BearerAccessToken("xyz");
 
@@ -88,10 +85,10 @@ public class OIDCClientInformationTest extends TestCase {
 
 		Date now = new Date();
 
-		OIDCClientInformation info = new OIDCClientInformation(clientID, regURL, accessToken, metadata, secret, now);
+		OIDCClientInformation info = new OIDCClientInformation(clientID, regURI, accessToken, metadata, secret, now);
 
 		assertEquals(clientID, info.getID());
-		assertEquals(regURL, info.getRegistrationURI());
+		assertEquals(regURI, info.getRegistrationURI());
 		assertEquals(accessToken, info.getRegistrationAccessToken());
 		assertEquals(metadata, info.getClientMetadata());
 		assertEquals(metadata, info.getOIDCClientMetadata());
@@ -102,11 +99,11 @@ public class OIDCClientInformationTest extends TestCase {
 
 
 	public void testSerializeAndParse()
-		throws MalformedURLException, ParseException {
+		throws Exception {
 
 		ClientID clientID = new ClientID("123");
 
-		URL regURL = new URL("https://c2id.com/client-reg/123");
+		URI regURI = new URI("https://c2id.com/client-reg/123");
 
 		BearerAccessToken accessToken = new BearerAccessToken("xyz");
 
@@ -117,14 +114,14 @@ public class OIDCClientInformationTest extends TestCase {
 
 		Date now = new Date(new Date().getTime() / 1000 * 1000);
 
-		OIDCClientInformation info = new OIDCClientInformation(clientID, regURL, accessToken, metadata, secret, now);
+		OIDCClientInformation info = new OIDCClientInformation(clientID, regURI, accessToken, metadata, secret, now);
 
 		String json = info.toJSONObject().toJSONString();
 
 		info = OIDCClientInformation.parse(JSONObjectUtils.parseJSONObject(json));
 
 		assertEquals(clientID, info.getID());
-		assertEquals(regURL.toString(), info.getRegistrationURI().toString());
+		assertEquals(regURI.toString(), info.getRegistrationURI().toString());
 		assertEquals(accessToken.getValue(), info.getRegistrationAccessToken().getValue());
 		assertEquals(metadata.getName(), info.getClientMetadata().getName());
 		assertEquals(now.getTime(), info.getIssueDate().getTime());
