@@ -1,7 +1,7 @@
 package com.nimbusds.openid.connect.sdk.rp;
 
 
-import java.net.URL;
+import java.net.URI;
 
 import com.nimbusds.oauth2.sdk.client.ClientRegistrationErrorResponse;
 import com.nimbusds.oauth2.sdk.client.ClientRegistrationResponse;
@@ -22,14 +22,14 @@ public class OIDCClientRegistrationResponseParserTest extends TestCase {
 		throws Exception {
 
 		ClientID id = new ClientID("123");
-		URL regURL = new URL("https://c2id.com/client-reg/123");
+		URI regURI = new URI("https://c2id.com/client-reg/123");
 		BearerAccessToken accessToken = new BearerAccessToken();
 		OIDCClientMetadata metadata = new OIDCClientMetadata();
-		metadata.setRedirectionURI(new URL("https://client.com/cb"));
+		metadata.setRedirectionURI(new URI("https://client.com/cb"));
 		metadata.setName("My app");
 		metadata.applyDefaults();
 
-		OIDCClientInformation clientInfo = new OIDCClientInformation(id, regURL, accessToken, metadata, null, null);
+		OIDCClientInformation clientInfo = new OIDCClientInformation(id, regURI, accessToken, metadata, null, null);
 
 		OIDCClientInformationResponse response = new OIDCClientInformationResponse(clientInfo);
 
@@ -40,7 +40,7 @@ public class OIDCClientRegistrationResponseParserTest extends TestCase {
 		response = (OIDCClientInformationResponse)regResponse;
 
 		assertEquals(id, response.getOIDCClientInformation().getID());
-		assertEquals(regURL, response.getOIDCClientInformation().getRegistrationURI());
+		assertEquals(regURI, response.getOIDCClientInformation().getRegistrationURI());
 		assertEquals(accessToken.getValue(), response.getOIDCClientInformation().getRegistrationAccessToken().getValue());
 		assertEquals("My app", response.getOIDCClientInformation().getClientMetadata().getName());
 		assertNull(response.getOIDCClientInformation().getSecret());
