@@ -1,13 +1,14 @@
 package com.nimbusds.openid.connect.sdk.rp;
 
 
-import java.net.URL;
+import java.net.URI;
+
+import junit.framework.TestCase;
 
 import com.nimbusds.oauth2.sdk.auth.Secret;
 import com.nimbusds.oauth2.sdk.http.HTTPRequest;
 import com.nimbusds.oauth2.sdk.id.ClientID;
 import com.nimbusds.oauth2.sdk.token.BearerAccessToken;
-import junit.framework.TestCase;
 
 
 /**
@@ -19,11 +20,11 @@ public class OIDCClientUpdateRequestTest extends TestCase {
 	public void testCycle()
 		throws Exception {
 
-		URL uri = new URL("https://c2id.com/client-reg/123");
+		URI uri = new URI("https://c2id.com/client-reg/123");
 		ClientID clientID = new ClientID("123");
 		BearerAccessToken accessToken = new BearerAccessToken();
 		OIDCClientMetadata metadata = new OIDCClientMetadata();
-		metadata.setRedirectionURI(new URL("https://client.com/cb"));
+		metadata.setRedirectionURI(new URI("https://client.com/cb"));
 		metadata.setName("My app");
 		metadata.applyDefaults();
 		Secret secret = new Secret();
@@ -54,5 +55,4 @@ public class OIDCClientUpdateRequestTest extends TestCase {
 		assertEquals("My app", request.getClientMetadata().getName());
 		assertEquals(secret.getValue(), request.getClientSecret().getValue());
 	}
-
 }
